name:                libtorrent
version:             0.2.0.0
synopsis:            Libtorrent libgary bindings for Haskell
description:

                     Bindings for <http://www.libtorrent.org/ libtorrent> library.

homepage:            https://github.com/eryx67/haskell-libtorrent#readme
license:             BSD3
license-file:        LICENSE
author:              Vladimir G. Sekisov
maintainer:          eryx67@gmail.com
copyright:           BSD
category:            Network
build-type:          Simple
extra-source-files: test-data/debian-8.5.0-amd64-CD-1.iso.torrent
                  , README.md
                  , LICENSE
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Network.Libtorrent
                     , Network.Libtorrent.Internal
                     , Network.Libtorrent.Inline
                     , Network.Libtorrent.Types.ArrayLike
                     , Network.Libtorrent.Types
                     , Network.Libtorrent.TH
                     , Network.Libtorrent.String
                     , Network.Libtorrent.Sha1Hash
                     , Network.Libtorrent.Bitfield
                     , Network.Libtorrent.ErrorCode
                     , Network.Libtorrent.Exceptions
                     , Network.Libtorrent.Exceptions.Internal
                     , Network.Libtorrent.Extensions
                     , Network.Libtorrent.FileStorage
                     , Network.Libtorrent.FileStorage.FileSlice
                     , Network.Libtorrent.Session
                     , Network.Libtorrent.Session.SessionStatus
                     , Network.Libtorrent.Session.AddTorrentParams
                     , Network.Libtorrent.Session.DhtSettings
                     , Network.Libtorrent.Session.PeSettings
                     , Network.Libtorrent.Session.ProxySettings
                     , Network.Libtorrent.Session.SessionSettings
                     , Network.Libtorrent.TorrentInfo
                     , Network.Libtorrent.TorrentInfo.AnnounceEntry
                     , Network.Libtorrent.TorrentHandle
                     , Network.Libtorrent.TorrentHandle.TorrentStatus
                     , Network.Libtorrent.PeerInfo
                     , Network.Libtorrent.PeerRequest
                     , Network.Libtorrent.TorrentHandle.PartialPieceInfo
                     , Network.Libtorrent.TorrentHandle.BlockInfo
                     , Network.Libtorrent.Alert
                     , Network.Libtorrent.Bencode
                     , Network.Libtorrent.CreateTorrent
                     , Network.Libtorrent.Rss.FeedItem
                     , Network.Libtorrent.Rss.FeedHandle
                     , Network.Libtorrent.Rss
                     , Network.Libtorrent.Vectors
  c-sources: src/Network/Libtorrent/String.cpp
           , src/Network/Libtorrent/Sha1Hash.cpp
           , src/Network/Libtorrent/Bitfield.cpp
           , src/Network/Libtorrent/ErrorCode.cpp
           , src/Network/Libtorrent/Exceptions/Internal.cpp
           , src/Network/Libtorrent/Extensions.cpp
           , src/Network/Libtorrent/FileStorage.cpp
           , src/Network/Libtorrent/FileStorage/FileSlice.cpp
           , src/Network/Libtorrent/Session.cpp
           , src/Network/Libtorrent/Session/AddTorrentParams.cpp
           , src/Network/Libtorrent/Session/DhtSettings.cpp
           , src/Network/Libtorrent/Session/PeSettings.cpp
           , src/Network/Libtorrent/Session/ProxySettings.cpp
           , src/Network/Libtorrent/Session/SessionSettings.cpp
           , src/Network/Libtorrent/Session/SessionStatus.cpp
           , src/Network/Libtorrent/TorrentInfo.cpp
           , src/Network/Libtorrent/TorrentInfo/AnnounceEntry.cpp
           , src/Network/Libtorrent/TorrentHandle.cpp
           , src/Network/Libtorrent/TorrentHandle/TorrentStatus.cpp
           , src/Network/Libtorrent/PeerInfo.cpp
           , src/Network/Libtorrent/PeerRequest.cpp
           , src/Network/Libtorrent/TorrentHandle/PartialPieceInfo.cpp
           , src/Network/Libtorrent/TorrentHandle/BlockInfo.cpp
           , src/Network/Libtorrent/Alert.cpp
           , src/Network/Libtorrent/Bencode.cpp
           , src/Network/Libtorrent/CreateTorrent.cpp
           , src/Network/Libtorrent/Rss/FeedItem.cpp
           , src/Network/Libtorrent/Rss/FeedHandle.cpp
           , src/Network/Libtorrent/Rss.cpp
           , src/Network/Libtorrent/Vectors.cpp
           , src/Network/Libtorrent.cpp
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.6.2
                     , inline-c
                     , inline-c-cpp
                     , text
                     , exceptions
                     , errors
                     , transformers
                     , bytestring
                     , bitwise
                     , template-haskell
                     , vector
                     , binary
                     , cryptohash
                     , random
  default-language:    Haskell2010
  extra-libraries: stdc++
  pkgconfig-depends: libtorrent-rasterbar >= 1.0.9
  include-dirs: include
  cc-options: -Wall -O2 -std=c++11
  ghc-options: -Wall -fwarn-incomplete-patterns -threaded -funbox-strict-fields -O2 -rtsopts

executable libtorrent-client
  hs-source-dirs:      examples
  main-is:             Client.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  cc-options: -Wall -O2 -std=c++11
  build-depends:       base
                     , libtorrent
                     , data-default
                     , text
                     , monad-logger
                     , formatting
                     , exceptions
                     , bytestring
                     , transformers
                     , base16-bytestring
                     , vector
                     , ansi-terminal
                     , async
                     , directory
                     , filepath
                     , easy-file
                     , lifted-base
                     , monad-control
                     , optparse-applicative
  default-language:    Haskell2010

executable libtorrent-simple-client
  hs-source-dirs:      examples
  main-is:             SimpleClient.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  cc-options: -Wall -O2 -std=c++11
  build-depends:       base
                     , libtorrent
                     , data-default
                     , text
                     , formatting
                     , monad-loops
                     , monad-control
                     , optparse-applicative
  default-language:    Haskell2010

executable libtorrent-rss-reader
  hs-source-dirs:      examples
  main-is:             RssReader.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  cc-options: -Wall -O2 -std=c++11
  build-depends:       base
                     , libtorrent
                     , data-default
                     , text
                     , formatting
                     , transformers
                     , async
                     , monad-control
                     , monad-loops
                     , optparse-applicative
  default-language:    Haskell2010

executable libtorrent-make-torrent
  hs-source-dirs:      examples
  main-is:             MakeTorrent.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  cc-options: -Wall -O2 -std=c++11
  build-depends:       base
                     , libtorrent
                     , data-default
                     , text
                     , formatting
                     , transformers
                     , async
                     , monad-control
                     , optparse-applicative
                     , directory
                     , easy-file
                     , filepath
                     , bytestring
  default-language:    Haskell2010

test-suite libtorrent-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , libtorrent
                     , hspec
                     , async
  ghc-options:      -Wall -fwarn-incomplete-patterns -threaded -funbox-strict-fields -O2 -rtsopts
  cc-options: -Wall -O2 -std=c++11
  pkgconfig-depends: libtorrent-rasterbar >= 1.0.9
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/eryx67/haskell-libtorrent
